--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-scripts": "^5.0.1"  // Add this line
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm install --force"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
