--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-reader": "^3.0.0-beta-1",
-    "react-scripts": "^5.0.1"  // Add this line
+    "react-scripts": "^5.0.1"  
   },
   "scripts": {
     "start": "react-scripts start",
